# traffic_inspector

./: Cargo.toml  README.md  config.json  rules.json
docs/: install_pip3_rust.sh
rules/: acesso_remoto.json  alertas.json  amazon.json  antivirus.json  aplicacoes_empresariais.json  apostas.json  armazenamento_em_nuvem.json  banking.json  bate_papo.json  blogs.json  bluepex_bypass.json  buscadores.json  downloads.json  ecommerces.json  educacao.json  eletronicos.json  esporte.json  filmes.json  google.json  governo.json  humor.json  inteligencia_artificial.json  jogos.json  microsoft.json  p2p_torrent.json  pornografia.json  portais.json  rede_sociais.json  restricoes_procon.json  servidores_adsense.json  streaming.json  youtube.json
src/: main.rs
