[package]
name = "traffic_inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
regex = "1.7"
ipnetwork = "0.18.0"
tokio = { version = "1", features = ["full"], optional = true }
hickory-dns = { version = "0.25.0-alpha.4" }

[features]
default = []
async = ["tokio"]